# seanime

./: .dockerignore  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_AND_BUILD.md  DOCKER.md  Dockerfile  LICENSE  README.md  air.toml  docker-compose.yml  flake.nix  go.mod  go.sum  goreleaser.dockerfile  main.go  mpv-prism.lock.json  test.md
.github/: FUNDING.yml  pull_request_template.md
cmd/: main.go
codegen/: README.md  main.go
internal/: README.md
mihon-extension/: .gitignore  common.gradle  gradle.properties  settings.gradle.kts
mobile/: mobile.go
seanime-denshi/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.main.json
seanime-desktop/: .gitignore  README.md  package-lock.json  package.json
seanime-desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
seanime-desktop/src-tauri/capabilities/: default.json  desktop.json  main.json
seanime-desktop/src-tauri/icons/: icon.icns
seanime-desktop/src-tauri/src/: constants.rs  lib.rs  main.rs  server.rs  tray.rs
seanime-docs/: main.go  main_test.go  routes.json
seanime-parser/: README.md  keyword_helper.go  keyword_manager.go  metadata.go  parser.go  parser_episode.go  parser_episode_test.go  parser_helper.go  parser_helper_test.go  parser_keywords_test.go  parser_season.go  parser_season_test.go  parser_title.go  parser_title_test.go  token.go  token_helper.go  token_manager.go  token_manager_enclosed.go  token_manager_test.go  tokenizer.go  tokenizer_test.go  utils.go  utils_test.go
seanime-web/: .env.denshi  .env.desktop  .env.development.desktop  .env.mobile  .env.web  .gitignore  Makefile  README.md  codegen.ts  index.html  next.config.js  package-lock.json  (+7 more)
seanime-web-legacy/: .env.desktop  .env.web  .gitignore  Makefile  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
(+3473 files in other folders)
