[package]
name = "seanime-desktop"
version = "0.1.0"
description = "Seanime Desktop"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.4.1", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-shell = "2.2.1"
strip-ansi-escapes = "0.2.1"
tokio = "1.43.0"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-os = "2.2.1"
tauri-plugin-clipboard-manager = "2.2.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.4.0"
